# Aquatic-Weeds-Programme

./: .editorconfig  .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: pr_master.yml
assets/: main.css
coordinator/: __init__.py
data/: partial_prediction_data.csv
